--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <ul class="auth-nav">
           <li class="auth-nav-item">
             <a class="auth-nav-link" href="mailto:info@devstudio.com" lang="en"
-              >info@devstudio.com</a
+              ><svg class="icon-envelope"><use xlink:href="./images/symbol-defs.svg#icon-envelope"></use></svg>info@devstudio.com</a
             >
           </li>
           <li class="auth-nav-item">
-            <a class="auth-nav-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="auth-nav-link" href="tel:+380961111111"><svg class="icon-smartphone"><use xlink:href="./images/symbol-defs.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -50,7 +50,7 @@
     <!-- Основной контент -->
     <main>
       <!-- Заказ услуги -->
-      <section class="hero">
+      <section class="hero hero-img">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-button" type="button">Заказать услугу</button>
@@ -63,24 +63,44 @@
           <h2 class="compani-title">Особенности компании</h2>
           <ul class="features">
             <li class="features-item">
+              <div class="icon-block">
+                <svg height="70px" width="70px">
+                  <use xlink:href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-block">
+                <svg width="70px" height="70px">
+                  <use xlink:href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-block">
+                <svg width="70px" height="70px">
+                  <use xlink:href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-block">
+                <svg width="70px" height="70px">
+                  <use xlink:href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -131,6 +151,14 @@
               <div class="comand-meta">
                 <h3 class="command-title">Игорь Демьяненко</h3>
                 <p class="command-text" lang="en">Product Designer</p>
+                <div class="icon">
+                  <ul class="icon-list">
+                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="command-item">
@@ -143,6 +171,14 @@
               <div class="comand-meta">
                 <h3 class="command-title">Ольга Репина</h3>
                 <p class="command-text" lang="en">Frontend Developer</p>
+                <div class="icon">
+                  <ul class="icon-list">
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="command-item">
@@ -154,7 +190,15 @@
               />
               <div class="comand-meta">
                 <h3 class="command-title">Николай Тарасов</h3>
-                <p class="command-text" lang="en">Marketing</p>
+                <p class="command-text" lang="en">Mar keting</p>
+                <div class="icon">
+                  <ul class="icon-list">
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="command-item">
@@ -167,17 +211,60 @@
               <div class="comand-meta">
                 <h3 class="command-title">Михаил Ермаков</h3>
                 <p class="command-text" lang="en">UI Designer</p>
+                <div class="icon">
+                  <ul class="icon-list">
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="clients section">
+        <div class="container">
+          <h2 class="clients-titles">Постоянные клиенты</h2>
+          <div class="client">
+            <ul class="client-list">
+            <li class="client-item">
+              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo"></use></svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo2"></use></svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo3"></use></svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo4"></use></svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo5"></use></svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo6"></use></svg>
+              </a>
+            </li>
+          </ul>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <!-- Футер -->
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="/" lang="en"><span class="logo-web">Web</span>Studio</a>
+        <div>
+          <a class="footer-logo" href="/" lang="en"><span class="logo-web">Web</span>Studio</a>
         <address class="address">
           <ul class="address-list">
             <li class="address-item">
@@ -195,7 +282,18 @@
             </li>
           </ul>
         </address>
+        </div>
+        <div class="connect">
+        <h3 class="connect-titles">присоединяйтесь</h3>
+        <ul>
+          <li class="connect-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="connect-item"><a href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="connect-item"><a href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="connect-item"><a href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+        </ul>
       </div>
+      </div>
+      
     </footer>
   </body>
 </html>
