Добавление svg и фона героя

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
                 <p class="command-text" lang="en">Product Designer</p>
                 <div class="icon">
                   <ul class="icon-list">
-                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg" width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
                   </ul>
                 </div>
               </div>
@@ -173,10 +173,10 @@
                 <p class="command-text" lang="en">Frontend Developer</p>
                 <div class="icon">
                   <ul class="icon-list">
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
                   </ul>
                 </div>
               </div>
@@ -193,10 +193,10 @@
                 <p class="command-text" lang="en">Mar keting</p>
                 <div class="icon">
                   <ul class="icon-list">
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
                   </ul>
                 </div>
               </div>
@@ -213,10 +213,10 @@
                 <p class="command-text" lang="en">UI Designer</p>
                 <div class="icon">
                   <ul class="icon-list">
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
-                    <li class="icon-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+                    <li class="icon-item"><a class="icon-link" href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
                   </ul>
                 </div>
               </div>
@@ -230,27 +230,27 @@
           <div class="client">
             <ul class="client-list">
             <li class="client-item">
-              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo"></use></svg>
+              <a class="client-link" href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo"></use></svg>
               </a>
             </li>
             <li class="client-item">
-              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo2"></use></svg>
+              <a class="client-link" href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo2"></use></svg>
               </a>
             </li>
             <li class="client-item">
-              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo3"></use></svg>
+              <a class="client-link" href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo3"></use></svg>
               </a>
             </li>
             <li class="client-item">
-              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo4"></use></svg>
+              <a class="client-link" href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo4"></use></svg>
               </a>
             </li>
             <li class="client-item">
-              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo5"></use></svg>
+              <a class="client-link" href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo5"></use></svg>
               </a>
             </li>
             <li class="client-item">
-              <a href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo6"></use></svg>
+              <a class="client-link" href=""><svg  class="client-icon" width="106px" height="60px"><use href="./images/symbol-defs.svg#icon-Logo6"></use></svg>
               </a>
             </li>
           </ul>
@@ -262,8 +262,8 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <div>
+      <div class="container footer-cont">
+        <div class="address-block">
           <a class="footer-logo" href="/" lang="en"><span class="logo-web">Web</span>Studio</a>
         <address class="address">
           <ul class="address-list">
@@ -283,13 +283,13 @@
           </ul>
         </address>
         </div>
-        <div class="connect">
+        <div class="connect-block">
         <h3 class="connect-titles">присоединяйтесь</h3>
-        <ul>
-          <li class="connect-item"><a href=""><svg class="icon-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-                    <li class="connect-item"><a href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
-                    <li class="connect-item"><a href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
-                    <li class="connect-item"><a href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+        <ul class="connect-list">
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
         </ul>
       </div>
       </div>
