--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,11 @@
         <ul class="auth-nav">
           <li class="auth-nav-item">
             <a class="auth-nav-link" href="mailto:info@devstudio.com" lang="en"
-              >info@devstudio.com</a
+              ><svg class="icon-envelope"><use xlink:href="./images/symbol-defs.svg#icon-envelope"></use></svg>info@devstudio.com</a
             >
           </li>
           <li class="auth-nav-item">
-            <a class="auth-nav-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="auth-nav-link" href="tel:+380961111111"><svg class="icon-smartphone"><use xlink:href="./images/symbol-defs.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -157,8 +157,9 @@
 
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="/" lang="en"><span class="logo-web">Web</span>Studio</a>
+      <div class="container footer-cont">
+        <div class="address-block">
+          <a class="footer-logo" href="/" lang="en"><span class="logo-web">Web</span>Studio</a>
         <address class="address">
           <ul class="address-list">
             <li class="address-item">
@@ -176,7 +177,18 @@
             </li>
           </ul>
         </address>
+        </div>
+        <div class="connect-block">
+        <h3 class="connect-titles">присоединяйтесь</h3>
+        <ul class="connect-list">
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-twitter"></use></svg></a></li>
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-facebook"></use></svg></a></li>
+          <li class="connect-item"><a class="connect-link" href=""><svg class="connect-svg width="20px" height="20px"><use xlink:href="./images/symbol-defs.svg#icon-linkedin"></use></svg></a></li>
+        </ul>
       </div>
+      </div>
+      
     </footer>
   </body>
 </html>
